<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#f2f2f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 상단 액션바 -->
    <RelativeLayout 
        android:background="#222222"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip">
        
        <Button 
            android:id="@+id/new_prayer_activity_cancel_button"
            android:background="@drawable/actionbar_cancel_button"
            android:layout_width="70dip"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="cancelButton"
            />
        
        <TextView 
            android:id="@+id/new_prayer_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/new_prayer_activity_cancel_button"
            android:text="@string/new_prayer_title"
            android:textSize="18sp"
            android:textColor="#f2f2f2"
            android:layout_marginLeft="6dip"
            />
        
        <Button
            android:id="@+id/new_prayer_activity_ok_botton"
            android:background="@drawable/actionbar_ok_button"
            android:layout_width="70dip"
            android:layout_height="50dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="okButton"
            />
    </RelativeLayout>
    
    <!-- 컨텐츠 구성 내용 -->
    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="16dip">
        
	        <!-- 대상자 -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/prayer_target"
		        android:textColor="#999999"
		        android:textSize="16sp"
		        
		        android:focusable="true"
				android:focusableInTouchMode="true"
		        />
		    
		    <EditText 
		        android:id="@+id/new_prayer_target"
		        android:background="@drawable/edit_text_9"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:textColor="#222222"
		        android:padding="8dip"
		        android:singleLine="true"
		        android:inputType="none"
		        />
		    
		    <!-- 날짜 -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/prayer_date"
		        android:textColor="#999999"
		        android:textSize="16sp"
		        />
		    
		    <LinearLayout
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content">
    
			    <Button
			        android:id="@+id/new_prayer_date"
			        android:background="@drawable/edit_text_9"
			        android:layout_weight="7"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="left|center_vertical"
			        android:text="@string/prayer_date"
			        android:textSize="18sp"
			        android:textColor="#222222"
			        android:onClick="setDate"
			        android:padding="8dip"
			        />
			    
   			    <Button 
			        android:background="@drawable/button"
			        android:layout_weight="1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/pryaer_today"
			        android:textSize="12sp"
			        android:textColor="#222222"
			        android:onClick="setToday"
			        android:layout_marginLeft="8sp"/>
			    
		    </LinearLayout>
		    
		    <!-- 그룹 -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/prayer_group"
		        android:textColor="#999999"
		        android:textSize="16sp"
		        />
		    
		    <Button
		        android:id="@+id/new_prayer_group"
		        android:background="@drawable/edit_text_9"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="left|center_vertical"
		        android:textSize="18sp"
		        android:textColor="#222222"
		        android:onClick="setGroup"
		        android:padding="8dip"
		        />
		    
		    <!-- 기도내용 -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/prayer_title"
		        android:textColor="#999999"
		        android:textSize="16sp"
		        />
		    
		    <EditText 
		        android:id="@+id/new_prayer_title"
		        android:background="@drawable/edit_text_9"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:textColor="#222222"
		        android:padding="8dip"
		        android:inputType="none"
		        />
		    
		    <!-- 응답 -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/prayer_answer"
		        android:textColor="#999999"
		        android:textSize="16sp"
		        />
		    
		    <EditText 
		        android:id="@+id/new_prayer_answer"
		        android:background="@drawable/edit_text_9"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:textColor="#222222"
		        android:padding="8dip"
		        android:inputType="none"
		        />
		    
		    <!-- 말씀 -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/prayer_word"
		        android:textColor="#999999"
		        android:textSize="16sp"
		        />
		    
		    <EditText 
		        android:id="@+id/new_prayer_word"
		        android:background="@drawable/edit_text_9"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:textColor="#222222"
		        android:padding="8dip"
		        android:inputType="none"
		        />
	    
	    </LinearLayout>
    </ScrollView>
</LinearLayout>