<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <!-- 상단 액션바 -->
    <RelativeLayout
        android:background="#222222"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip">
     
        <ImageView
            android:id="@+id/all_group_list_activity_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@drawable/actionbar_icon" />
        
        <TextView
            android:id="@+id/all_group_list_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/all_group_list_activity_icon"
            android:text="@string/app_name"
            android:textColor="#f2f2f2"
            android:textSize="18sp" />
        
    </RelativeLayout>
        
    
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- 컨텐츠 -->
        <LinearLayout
            android:background="#f2f2f2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">
            
            <!-- 비밀번호 입력 안내 텍스트 -->
            <TextView 
                android:id="@+id/password_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/password_key_input_text"
                android:textColor="#222222"
                android:textSize="20sp"/>
            
            <!-- 비밀번호 박스 -->
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
       
            <ImageView 
                android:id="@+id/password_activity_password_box_1"
                android:src="@drawable/password_box_normal"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_margin="5dip"
                />
            
            <ImageView 
                android:id="@+id/password_activity_password_box_2"
                android:src="@drawable/password_box_normal"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_margin="5dip"
                />
            
            <ImageView 
                android:id="@+id/password_activity_password_box_3"
                android:src="@drawable/password_box_normal"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_margin="5dip"
                />
            
            <ImageView 
                android:id="@+id/password_activity_password_box_4"
                android:src="@drawable/password_box_normal"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_margin="5dip"
                />
            
            </LinearLayout>
            
        </LinearLayout>
   
        
        <!-- 키버튼 -->
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <!-- 1 ~ 3 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                
                <Button
                    android:id="@+id/password_activity_key_1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_1"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <Button
                    android:id="@+id/password_activity_key_2"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_2"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <Button
                    android:id="@+id/password_activity_key_3"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_3"
                    android:textColor="#222222"
                    android:textSize="30sp" />

            </LinearLayout>
            
            <!-- 4 ~ 6 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                
                <Button
                    android:id="@+id/password_activity_key_4"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_4"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <Button
                    android:id="@+id/password_activity_key_5"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_5"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <Button
                    android:id="@+id/password_activity_key_6"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_6"
                    android:textColor="#222222"
                    android:textSize="30sp" />

            </LinearLayout>
            
            <!-- 7 ~ 9 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                
                <Button
                    android:id="@+id/password_activity_key_7"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_7"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <Button
                    android:id="@+id/password_activity_key_8"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_8"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <Button
                    android:id="@+id/password_activity_key_9"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_9"
                    android:textColor="#222222"
                    android:textSize="30sp" />

            </LinearLayout>
            
            <!-- exit, o, back -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                
                <ImageButton
                    android:id="@+id/password_activity_key_exit"
                    android:src="@drawable/icon_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:textSize="20sp" />
                
                <Button
                    android:id="@+id/password_activity_key_0"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton"
                    android:text="@string/password_key_0"
                    android:textColor="#222222"
                    android:textSize="30sp" />
                
                <ImageButton
                    android:id="@+id/password_activity_key_back"
                    android:src="@drawable/icon_back"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_key"
                    android:onClick="keyButton" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>